<resources>
    <string name="app_name">积糖</string>
    <string name="facebook_app_id">3546860392031186</string>
    <string name="fb_login_protocol_scheme">fb3546860392031186</string>
    <string name="server_client_id">325834510992-5o1upod7qkkgjh2bk9lg0th1abhfb6i7.apps.googleusercontent.com</string>
    <string name="service_error">服务器出错，请重试</string>
    <string name="retry_net_error">网络异常，点击重试</string>
    <string name="retry_load_error">加载失败，请稍后重试</string>
    <string name="record">录音</string>
    <string name="emoj">表情</string>
    <string name="phone">视频电话</string>
    <string name="on_line">在线</string>
    <string name="on_line_pc">PC在线</string>
    <string name="on_line_mac">Mac在线</string>
    <string name="on_line_web">web在线</string>
    <string name="client_aos">Android</string>
    <string name="client_ios">iOS</string>
    <string name="on_line_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 分享消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_p2p_clear">清空点对点历史消息</string>
    <string name="message_p2p_clear_tips">确定清空历史消息?</string>
    <string name="sure_keep_roam">确认单保留漫游</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="report_square">确认举报该条动态？</string>
    <string name="report_dating">确认举报该条活动？</string>
    <string name="dissolve_wechat">是否确定解除微信绑定？</string>
    <string name="input_contact_panel">联系方式</string>
    <string name="input_panel_take_photo">拍照</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="readed">已读</string>
    <string name="get_readed">获取回执</string>
    <string name="sended">已发送</string>
    <string name="input_panel_photo">图片</string>
    <string name="input_panel_video">视频</string>
    <string name="input_panel_location">位置</string>
    <string name="input_panel_take">拍摄</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="withdrawn_msg">撤 回</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="pic_and_video">图片和视频</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_cancel">上滑取消</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松手取消</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_record">视频录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="picker_image_preview">预览</string>
    <string name="picker_image_send">发送</string>
    <string name="picker_image_folder">相册</string>
    <string name="picker_image_album_loading">相册加载中…</string>
    <string name="picker_image_album_empty">相册中没有图片！</string>
    <string name="picker_image_folder_info">共%d张</string>
    <string name="picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="picker_image_send_select">完成（%d）</string>
    <string name="picker_image_preview_original">发送原图</string>
    <string name="picker_image_preview_original_select">发送原图（%s）</string>
    <string name="picker_image_error">获取图片出错</string>
    <string name="image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="unknow_size">未知大小</string>
    <string name="is_send_image">是否发送该原始图片？</string>
    <string name="multi_image_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="is_send_multi_image">是否发送这些原始图片？</string>
    <string name="waitfor_image_local">正在打开相册，请稍候\u2026</string>
    <string name="recapture">重拍</string>
    <string name="image_show_error">图片显示异常</string>
    <string name="memory_out">内存不足</string>
    <string name="choose_from_photo_album">从手机相册选择</string>
    <string name="choose">选取</string>
    <string name="crop">裁剪</string>
    <string name="download_picture_fail">图片下载失败</string>
    <string name="pick_image">选择图片</string>
    <string name="pick_video">选择视频</string>
    <string name="pick_album">相册</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">(%1$d)</string>
    <string name="preview_image_count">%1$d/%2$d</string>
    <string name="complete">完成</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="choose_all">全选</string>
    <string name="choose_max_num">最多选择%d张</string>
    <string name="choose_min_num">至少选择%d张</string>
    <string name="choose_max_num_video">最多选择%d个视频</string>
    <string name="choose_video_photo">图片和视频无法同时选择</string>
    <string name="choose_video_duration_max_tip">只能选择%d秒内的视频，请编辑好后再选择</string>
    <string name="choose_video_duration_min_tip">不可导入小于3秒的视频</string>
    <string name="back">返回</string>
    <string name="network_unavailable">网络连接失败</string>
    <string name="send_d">发送(%d)</string>
    <string name="video_network_not_good">网络不给力，稍后重试</string>
    <string name="permission_request">需要语音和摄像头权限</string>
    <string name="sure">确定</string>
    <string name="living_title">活体认证</string>
    <string name="living_tip">认证仅为判断你是真实用户\n请保持正脸在取景框中并根据引导完成识别</string>
    <string name="living_notice">认证仅供审核不会对其他用户公开</string>
    <string name="living_face_phone">正对手机</string>
    <string name="living_face_light">光源充足</string>
    <string name="living_face_nohide">脸无遮挡</string>
    <string name="living_begin">开始识别</string>
    <string name="user_protocol">积糖用户协议</string>
    <string name="privacy_protocol">积糖隐私协议</string>
    <string name="privacy_title">隐私条款</string>
    <string name="user_title">用户协议</string>
    <string name="login_error">登录失败！请重试</string>
    <string name="login_tip">登录即代表同意</string>
    <string name="login_tip_and"> 及 </string>
    <string name="tourist">游客模式</string>
    <string name="open_internet">请开启数据流量</string>
    <string name="login_off">注销账号</string>
    <string name="reget_verify_code">重新获取</string>
    <string name="verify_code_has_send">验证码已发送</string>
    <string name="verify_code_sended">验证码已发至</string>
    <string name="verify_code">验证码</string>
    <string name="question_feed_back">问题反馈</string>
    <string name="about">关于</string>
    <string name="accost_tip1">列表均为初级会员通过免费消息渠道产生的回话，可调整右上角</string>
    <string name="accost_tip2">私聊权限</string>
    <string name="accost_tip3">仅接受更优质用户拒绝骚扰无效信息</string>
    <string name="account_title">账号相关</string>
    <string name="account_not_bind">未绑定</string>
    <string name="account_bind_wechat">绑定微信</string>
    <string name="account_bind_success">绑定成功</string>
    <string name="account_unbind">解除绑定</string>
    <string name="account_unbind_success">解绑成功</string>
    <string name="account_wechat">微信</string>
    <string name="account_change_phone">变更号码</string>
    <string name="account_phone_num">手机号码</string>
    <string name="label_title">选择兴趣</string>
    <string name="save">保存</string>
    <string name="gender_man">男</string>
    <string name="gender_woman">女</string>
    <string name="location_roaming">位置漫游</string>
    <string name="current_location">当前位置</string>
    <string name="verify_has_commit">认证已提交</string>
    <string name="ok_1">好的</string>
    <string name="verifying_tip">你的认证正在审核中，审核结果稍后将以小助手形式通知您，请留意助手消息。审核大概需要1个工作日</string>
    <string name="goto_verify">去认证</string>
    <string name="only_gold_can_comment">仅黄金会员支持评论</string>
    <string name="leave_your_comment_to_see_you">留下你的评论，让TA看到你</string>
    <string name="tobe_gold_vip">成为黄金会员</string>
    <string name="filter">筛选</string>
    <string name="age">年龄</string>
    <string name="online_time">上线时间</string>
    <string name="in_one_day">1天内</string>
    <string name="in_three_day">3天内</string>
    <string name="in_seven_day">7天内</string>
    <string name="in_fifteen_day">15天内</string>
    <string name="un_limit">不限</string>
    <string name="only_show_verify_user">仅显示认证用户</string>
    <string name="open_after_verify">通过认证后可开启该筛选</string>
    <string name="show_me">向我展示</string>
    <string name="normal_pic">照片示例</string>
    <string name="make_sure_its_you">请确保与本人头像一致，照片不会对外公开</string>
    <string name="upload_img">上传照片</string>
    <string name="send_a_experience_card">赠送你一张体验卡</string>
    <string name="limit_free_experience">限时免费体验App所有功能\n感受被异性围绕的感觉</string>
    <string name="include_all_visit_power">包含查看所有功能的权限</string>
    <string name="get_vip_card">领取会员体验卡</string>
    <string name="gold_experience_card">黄金会员\n体验卡</string>
    <string name="expire_time">有效时间：%1$s</string>
</resources>