<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_rectangle_white_top_left_right_15_corners_bg">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="#ff000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/show_me"
        android:textColor="#ff191919"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RadioGroup
        android:id="@+id/rbSexAll"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_radio_sex_btn"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintRight_toRightOf="@id/filterAge"
        app:layout_constraintTop_toBottomOf="@id/tv5">

        <RadioButton
            android:id="@+id/switchSexMan"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_filter_sex_rb"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/gender_man"
            android:textColor="@color/sex_color_selector"
            android:textSize="15sp" />


        <RadioButton
            android:id="@+id/switchSexWoman"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_filter_sex_rb"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/gender_woman"
            android:textColor="@color/sex_color_selector"
            android:textSize="15sp" />


        <RadioButton
            android:id="@+id/switchSexAll"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_filter_sex_rb"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/un_limit"
            android:textColor="@color/sex_color_selector"
            android:textSize="15sp" />


    </RadioGroup>


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:textColor="#ff191919"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbSexAll" />

    <TextView
        android:id="@+id/filterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="18-20"
        android:textColor="#ff191919"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="18"
        android:textColor="#ffc5c6c8"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/seekBarAge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="3dp"
        android:text="35+"
        android:textColor="#ffc5c6c8"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@id/filterAge"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintTop_toTopOf="@id/tv2" />

    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/seekBarAge"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/filterAge"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:rsb_gravity="center"
        app:rsb_max="35"
        app:rsb_min="18"
        app:rsb_min_interval="3"
        app:rsb_mode="range"
        app:rsb_progress_drawable="@drawable/color_progress_age"
        app:rsb_progress_drawable_default="@drawable/color_progress_age_background"
        app:rsb_progress_height="2dp"
        app:rsb_thumb_drawable="@drawable/icon_filter_age" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/online_time"
        android:textColor="#ff191919"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <RadioGroup
        android:id="@+id/rgOnlineTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv7">

        <RadioButton
            android:id="@+id/timeOneDay"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:background="@drawable/selector_check_online"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/in_one_day"
            android:textColor="@color/color_selector_check_online"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/timeThreeDay"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_check_online"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/in_three_day"
            android:textColor="@color/color_selector_check_online"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/timeSevenDay"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_check_online"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/in_seven_day"
            android:textColor="@color/color_selector_check_online"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/timeFifteenDay"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_check_online"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/in_fifteen_day"
            android:textColor="@color/color_selector_check_online"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/timeNoLimit"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_check_online"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/un_limit"
            android:textColor="@color/color_selector_check_online"
            android:textSize="13sp" />

    </RadioGroup>


    <TextView
        android:id="@+id/tvLocationRoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:drawableRight="@drawable/icon_vip"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/location_roaming"
        android:textColor="#ff191919"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/rgOnlineTime" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:drawableLeft="@drawable/icon_location_orange"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingRight="15dp"
        android:text="@string/current_location"
        android:textColor="#ffff6318"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/tvLocationRoming"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLocationRoming" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:drawableRight="@drawable/icon_verify_pass"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/only_show_verify_user"
        android:textColor="#ff191919"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tvLocationRoming" />


    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:text="@string/open_after_verify"
        android:textColor="#ffc5c6c8"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv6" />


    <TextView
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_verify"
        android:textColor="@color/colorOrange"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv8"
        app:layout_constraintEnd_toEndOf="@id/filterAge"
        app:layout_constraintTop_toTopOf="@id/tv6" />

    <Switch
        android:id="@+id/switchShowVerify"
        android:layout_width="44dp"
        android:layout_height="26dp"
        android:checked="false"
        android:showText="false"
        android:thumb="@drawable/switch_ios_thumb"
        android:track="@drawable/selector_switch_ios_track"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/filterAge"
        app:layout_constraintTop_toTopOf="@id/tv8" />


    <Button
        android:id="@+id/btnCompleteFilter"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_confirm_btn_25dp"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />


</androidx.constraintlayout.widget.ConstraintLayout>

