<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.SweetHeartVerifyingActivity">

    <include layout="@layout/layout_actionbar" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/icon_sweet_verify_ing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/verify_has_commit"
        android:textColor="#ff191919"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/verifying_tip"
        android:textColor="#ffb5b7b9"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/okBtn"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/gradient_rectangle_orange_24dp"
        android:gravity="center"
        android:text="@string/ok_1"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>