<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rectangle_white_15dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_pt_comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/only_gold_can_comment"
        android:textColor="#ff191919"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/leave_your_comment_to_see_you"
        android:textColor="#ff191919"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/openPtVipBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gradient_gold_vip"
        android:gravity="center"
        android:text="@string/tobe_gold_vip"
        android:textColor="#ffffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="visible" />
</LinearLayout>
